manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82023045-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82023045.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82023045
            port:
              number: 8080
        pathType: Prefix
